Fix publish dir for front-end

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,3 @@
 [build]
   command = "cd back-end && npm install && npm run build && cd .. && cd front-end/ && npm install && npm run build"
+  publish = "front-end/build/"
