Fix missing functions

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,4 @@
 [build]
   command = "cd back-end && npm install && npm run build && cd .. && cd front-end/ && npm install && npm run build"
+  functions = "back-end/functions/"
   publish = "front-end/build/"
