--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-twemoji": "^0.3.0",
     "typeface-inter": "^3.15.1",
     "water.css": "^2.0.0",
     "web-vitals": "^0.2.4"
